@@ -4,7 +4,10 @@
 2015-03-04  Petasis George  <petasis@iit.demokritos.gr>
 	* library/tkdnd.tcl: Added support in <<DragInitCmd>> & <<DragEndCmd>>
 	for %x, %y mouse coordinates (relative to window that is the drag
-	source).
+	source). Added the ability to stop a drag on the drag source. The
+	<<DragInitCmd>> binding must return either "refuse_drop"
+	as a value (instead of a list), or use
+	"return -code break"|"return -code continue".
 
 2015-02-20  Petasis George  <petasis@iit.demokritos.gr>
 	* unix/TkDND_XDND.c: Fixed a bug in converting Time to a Tcl object.
